Fix typo in comment for CentOS/RedHat fact

--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -5,7 +5,7 @@
     sudo_group: "sudo"
   when: ansible_os_family == "Debian"
 
-- name: (USER) Set fact for Debian
+- name: (USER) Set fact for Red Hat/CentOS
   set_fact:
     sudo_group: "wheel"
   when: ansible_os_family == "RedHat"
